change primary colors scss

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $black: #222222;
-$primary: #4267b2;
-$secondary: #1da1f2;
+$primary: #1c57a5;
+$secondary: #58c140;
 $text: #666666;
 
 // Default Width
